# nomad-books

./: .env.example  README.md  docker-compose.yml  pom.xml  pyproject.toml  run.py  schema.prisma  settings.py
core/: auth.py
db/: application.py  base.py  description.py  image.py  sample.py  user.py
db_old/: application.py  base.py  description.py  image.py  sample.py  user.py
doc/: auth.md  c1.md  first.md  uc.md
doc/pic/: autorization.drawio  c1.drawio
models/: __init__.py  base.py  description.py  file.py  sample.py  user.py
pdfmakelib/: README.md  stickersA4.py
server/: run.py
server-auth/: Dockerfile  README.md  pom.xml
server-auth/src/main/java/com/dromakin/serverauth/: ServerAuthApplication.java
server-auth/src/main/java/com/dromakin/serverauth/config/: JWTConfigurer.java  SecurityConfig.java  SwaggerConfig.java
server-auth/src/main/resources/: application.properties
server-auth/src/main/resources/db/migration/postgresql/: V1__create_users.sql  V2__create_roles.sql  V3__create_user_roles.sql  V4__insert_roles.sql  V5__insert_users.sql  V6__insert_user_roles.sql
server-auth/src/test/java/com/dromakin/serverauth/: ServerAuthApplicationTests.java
server-telegram/: pom.xml
server-telegram/src/main/java/com/dromakin/servertelegram/: ServerTelegramApplication.java
server-telegram/src/test/java/com/dromakin/servertelegram/: ServerTelegramApplicationTests.java
server/api/: __init__.py  auth.py
tbot/: __init__.py  auth.py  common.py  errors.py  new_description.py  new_samples.py  pull_samples.py  start.py
(+21 files in other folders)
