[tool.poetry]
name = "nomad-books"
version = "0.1.0"
description = ""
authors = ["PavelMSTU <pavelmstu@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.22"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
