[tool.poetry]
name = "nomad-books"
version = "0.1.0"
description = ""
authors = ["PavelMSTU <pavelmstu@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
telebot = "^0.0.5"
cuid = "^0.4"
SQLAlchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
ptext = "^1.1.0"
reportlab = "^4.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
